deploy shimmpri client

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Balue NFTs - Present your Value in Base this summer</title>
+  <title>Shimmpri NFTs - Your Signature of Uniqueness and Value</title>
 </head>
 
 <body>
